# tunetag

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/tunetag-cli/: Cargo.toml
crates/tunetag-cli/src/: main.rs
crates/tunetag-cli/tests/: cli_integration.rs
crates/tunetag-core/: Cargo.toml
crates/tunetag-core/src/: audio_properties.rs  batch.rs  error.rs  lib.rs  rename.rs  tag_io.rs  types.rs
crates/tunetag-core/tests/: tag_io_tests.rs
crates/tunetag-core/tests/fixtures/: test.m4a
crates/tunetag-gui/: index.html  package-lock.json  package.json
crates/tunetag-gui/src/: App.tsx  FilesContext.tsx  TagEditContext.tsx  UndoRedoManager.test.ts  UndoRedoManager.ts  genres.ts  index.css  types.ts
crates/tunetag-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/tunetag-gui/src-tauri/src/: lib.rs  main.rs
crates/tunetag-gui/src-tauri/src/musicbrainz/: mod.rs
docs/: PRD.md
openspec/changes/auto-numbering/: tasks.md
openspec/changes/cli/: design.md  tasks.md
openspec/changes/core-tag-io/: design.md  proposal.md  tasks.md
openspec/changes/cover-art/: design.md  tasks.md
openspec/changes/file-loading-and-list/: design.md  proposal.md  tasks.md
openspec/changes/keyboard-nav-and-polish/: proposal.md  tasks.md
openspec/changes/musicbrainz-lookup/: design.md  tasks.md
openspec/changes/project-scaffolding/: tasks.md
openspec/changes/rename-from-tags/: proposal.md  tasks.md
openspec/changes/tag-panel/: tasks.md
openspec/changes/undo-redo/: proposal.md  tasks.md
openspec/specs/audio-properties/: spec.md
openspec/specs/cover-art/: spec.md
openspec/specs/file-loading/: spec.md
openspec/specs/musicbrainz-lookup/: spec.md
openspec/specs/progressive-file-loading/: spec.md
openspec/specs/refresh/: spec.md
stitch/: DESIGN.md  code.html
(+48 files in other folders)
