[package]
name = "tunetag-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for TuneTag — audio tag I/O, rename logic, and utilities"

[dependencies]
lofty.workspace = true
serde.workspace = true
serde_json.workspace = true
