[package]
name = "tunetag-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TuneTag desktop application — cross-platform audio tag editor"

[lib]
name = "tunetag_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tunetag-core = { path = "../../tunetag-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
